Bug #65995 - Adding FET timezone to translate to Europe/Kaliningrad and Europe/Minsk